# homerun

./: .gitignore  LICENSE  README.md  align_array.sbatch  bedgraphs_array.sbatch  collect.sbatch  config.env  config.env.example  mapping_array.sbatch  prepare.sbatch  pyproject.toml  submit_array.sh  tagdir_array.sbatch  tagdirs_combo_array.sbatch  tss_array.sbatch
csrnaseq/: README.md  __init__.py  __main__.py  bedgraphs.py  config.py  mapping.py  pipeline.py  prepare.py  qc.py  report.py  ritrie.py  stability.py  tagdirs.py  trim.py  tss.py  utils.py
csrnaseq_pipeline.egg-info/: PKG-INFO  README.md  SOURCES.txt  entry_points.txt  top_level.txt
homerun_jbonner-0.0.1/: PKG-INFO  README.md
homerun_jbonner-0.0.1/src/homerun_jbonner/: Homerun.py  HomerunDeseq2.py  HomerunTrim.py
src/: Homerun.py  HomerunCSV.py  HomerunDeseq2.py  HomerunDirBuilder.py  HomerunGenCSV.py  HomerunQC.py  HomerunReport.py  HomerunSTAR.py  HomerunState.py  HomerunTSS.py  HomerunTagdir.py  HomerunTrim.py  README.md  homerun_pipeline.csv  homerun_pipeline_example.csv  run_homerun.sh
