[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csrnaseq-pipeline"
version = "1.0.0"
description = "CSV-free csRNA-seq pipeline (trim → STAR → tag dirs → bedGraphs → TSS → QC → stability)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Duttke Lab" }]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
]

[project.scripts]
csrnaseq = "csrnaseq.pipeline:main"

[tool.setuptools]
packages = ["csrnaseq"]
